create button component e61

--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>تپسی کلون</title>
     <link rel="icon" href="./assets/images/logo.svg" />
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body dir="rtl">
-    <div class="div">
-      <h1>تپسی</h1>
-      <p>سلام به تپسی</p>
-    </div>
+
   </body>
 </html>
