--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body dir="rtl">
-  
+    <section class="block-plan">
+      <div class="paln">
+        <div class="card">
+          <header class="card__header">card header</header>
+          <div class="card__body">card body</div>
+        </div>
+      </div>
+      <div class="paln">paln 2</div>
+      <div class="paln">paln 3</div>
+    </section>
   </body>
 </html>
