--- a/index.html
+++ b/index.html
@@ -11,14 +11,48 @@
   </head>
   <body dir="rtl">
     <section class="block-plan">
-      <div class="paln">
-        <div class="card">
-          <header class="card__header">card header</header>
+      <div class="plan">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <span class="plan__introduction">
+              <span class="plan__name">عادی</span>
+              <span class="badge">10% off</span>
+            </span>
+            <span class="plan__price">290.000</span>
+            <span class="plan__billing-cycle">ماهانه / تومان</span>
+            <span class="plan__discription">سرویس ماشین های معمولی</span>
+          </header>
           <div class="card__body">card body</div>
         </div>
       </div>
-      <div class="paln">paln 2</div>
-      <div class="paln">paln 3</div>
+      <div class="plan">
+        <div class="card card--primary">
+          <header class="card__header">
+            <span class="plan__introduction">
+              <span class="plan__name">اقتصادی</span>
+              <span class="badge badge--primary">15% off</span>
+            </span>
+            <span class="plan__price">390.000</span>
+            <span class="plan__billing-cycle">ماهانه / تومان</span>
+            <span class="plan__discription">سرویس ماشین های کلاسیک</span>
+          </header>
+          <div class="card__body">card body</div>
+        </div>
+      </div>
+      <div class="plan">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <span class="plan__introduction">
+              <span class="plan__name">ویژه</span>
+              <span class="badge">20% off</span>
+            </span>
+            <span class="plan__price">490.000</span>
+            <span class="plan__billing-cycle">ماهانه / تومان</span>
+            <span class="plan__discription">سرویس ماشین های مدل بالا</span>
+          </header>
+          <div class="card__body">card body</div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
