continue plan section part4 e67

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body dir="rtl">
-    <section class="block-plan">
+    <section class="block-plan container">
       <div class="plan">
         <div class="card card--secondary">
           <header class="card__header">
@@ -24,7 +24,6 @@
           </header>
           <div class="card__body">
             <ul class="list list--tick">
-              <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
@@ -49,7 +48,6 @@
               <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
-              <li class="list__item">کیفیت معمولی</li>
             </ul>
             <button class="btn btn--primary btn--block">ثبت سفارش</button>
           </div>
@@ -68,7 +66,6 @@
           </header>
           <div class="card__body">
             <ul class="list list--tick">
-              <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
               <li class="list__item">کیفیت معمولی</li>
